[package]
name = "byond-sigview"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
meowtonin = { git = "https://github.com/Absolucy/meowtonin" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_System_ProcessStatus"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lib]
crate-type = ["cdylib"]
